--- a/package.json
+++ b/package.json
@@ -1,47 +1,70 @@
 {
-  "name": "sillagecarbone",
-  "version": "1.0.0",
-  "description": "Sillage Carbone project",
-  "main": "index.js",
-  "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "test": "jest",
-    "test:watch": "jest --watch"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@types/jest": "^29.5.2",
-    "cloudinary": "^1.37.3",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
-    "date-fns": "^2.30.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-formidable": "^1.2.0",
-    "express-validator": "^7.0.1",
-    "mongodb": "^5.7.0",
-    "mongoose": "^7.3.2",
-    "ts-jest": "^29.1.0",
-    "uid2": "^1.0.0"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.22.5",
-    "@babel/preset-react": "^7.22.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/express-formidable": "^1.2.0",
-    "@types/node": "^20.1.0",
-    "babel-jest": "^29.5.0",
-    "concurrently": "^8.0.1",
-    "jest": "^29.5.0",
-    "nodemon": "^2.0.22",
-    "react-test-renderer": "^18.2.0",
-    "typescript": "^5.0.4"
-  }
+	"name": "sillagecarbone",
+	"version": "1.0.0",
+	"description": "Sillage Carbone project",
+	"main": "index.js",
+	"scripts": {
+		"build": "npx tsc",
+		"start": "node dist/index.js",
+		"dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+		"test": "jest",
+		"test:watch": "jest --watch"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@types/supertest": "^2.0.12",
+		"cloudinary": "^1.37.3",
+		"cors": "^2.8.5",
+		"crypto-js": "^4.1.1",
+		"date-fns": "^2.30.0",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"express-formidable": "^1.2.0",
+		"express-validator": "^7.0.1",
+		"mongodb": "^5.7.0",
+		"mongodb-memory-server": "^8.13.0",
+		"mongoose": "^7.3.2",
+		"uid2": "^1.0.0"
+	},
+	"devDependencies": {
+		"@babel/preset-env": "^7.22.5",
+		"@babel/preset-react": "^7.22.5",
+		"@testing-library/react": "^14.0.0",
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.17",
+		"@types/express-formidable": "^1.2.0",
+		"@types/jest": "^29.5.3",
+		"@types/node": "^20.1.0",
+		"babel-jest": "^29.5.0",
+		"concurrently": "^8.0.1",
+		"jest": "^29.6.1",
+		"nodemon": "^2.0.22",
+		"react-test-renderer": "^18.2.0",
+		"supertest": "^6.3.3",
+		"ts-jest": "^29.1.1",
+		"typescript": "^5.0.4"
+	},
+	"jest": {
+		"clearMocks": true,
+		"coverageProvider": "v8",
+		"moduleFileExtensions": [
+			"ts",
+			"tsx",
+			"js",
+			"json",
+			"node"
+		],
+		"roots": [
+			"<rootDir>/"
+		],
+		"testMatch": [
+			"**/__tests__/**/?(*.)+(spec|test).[tj]s?(x)"
+		],
+		"transform": {
+			"^.+\\.(ts|tsx)$": "ts-jest"
+		}
+	}
 }
