--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@react-docgen/cli": "^1.0.2",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@types/supertest": "^2.0.12",
 		"cloudinary": "^1.37.3",
@@ -27,6 +28,7 @@
 		"mongodb": "^5.7.0",
 		"mongodb-memory-server": "^8.13.0",
 		"mongoose": "^7.3.2",
+		"react-docgen": "^6.0.2",
 		"uid2": "^1.0.0"
 	},
 	"devDependencies": {
