--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@react-docgen/cli": "^1.0.2",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@types/supertest": "^2.0.12",
-		"cloudinary": "^1.37.3",
+		"cloudinary": "^1.40.0",
 		"cors": "^2.8.5",
 		"crypto-js": "^4.1.1",
 		"date-fns": "^2.30.0",
@@ -28,6 +28,7 @@
 		"mongodb": "^5.7.0",
 		"mongodb-memory-server": "^8.13.0",
 		"mongoose": "^7.3.2",
+		"multer": "^1.4.5-lts.1",
 		"react-docgen": "^6.0.2",
 		"uid2": "^1.0.0"
 	},
@@ -39,11 +40,12 @@
 		"@types/express": "^4.17.17",
 		"@types/express-formidable": "^1.2.0",
 		"@types/jest": "^29.5.3",
+		"@types/multer": "^1.4.7",
 		"@types/node": "^20.1.0",
 		"babel-jest": "^29.5.0",
 		"concurrently": "^8.0.1",
 		"jest": "^29.6.1",
-		"nodemon": "^2.0.22",
+		"nodemon": "^3.0.1",
 		"react-test-renderer": "^18.2.0",
 		"supertest": "^6.3.3",
 		"ts-jest": "^29.1.1",
