--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "npx tsc",
-		"start": "node dist/index.js",
-		"dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-		"test": "NODE_ENV=test jest",
-		"test:watch": "jest --watch"
+		"start": "node dist/index.js"
 	},
 	"keywords": [],
 	"author": "",
