--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "npx tsc",
-		"start": "node dist/index.js"
+		"start": "node dist/index.js",
+		"postinstall": "tsc",
+		"watch-node": "nodemon dist/index.js",
+		"watch-ts": "tsc -w",
+		"deploy": "git add . && git commit -m Heroku && git push heroku master"
+	},
+	"engines": {
+		"node": "16.13.2"
 	},
 	"keywords": [],
 	"author": "",
