--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"express-formidable": "^1.2.0",
+		"express-jsdoc-swagger": "^1.8.0",
 		"express-validator": "^7.0.1",
 		"mongodb": "^5.7.0",
 		"mongodb-memory-server": "^8.13.0",
